增加过滤操作符

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".CreateOperationActivity"></activity>
         <activity android:name=".TransformingOperationActivity"></activity>
+        <activity android:name=".FilteringActivity"></activity>
 
     </application>
 
